syntax = "proto3";
package xion.v1;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/burnt-labs/xion/x/xion/types";

message GenesisState {
  uint32 platform_percentage = 1;
  repeated cosmos.base.v1beta1.Coin platform_minimums = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "platform_minimums,omitempty",
    (gogoproto.moretags) = "yaml:\"platform_minimums\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}
